--- a/bialoszewski/Base.lproj/Main.storyboard
+++ b/bialoszewski/Base.lproj/Main.storyboard
@@ -41,8 +41,14 @@
                                     <action selector="playTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ifT-3L-TiK"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ah-UD-sr8">
-                                <rect key="frame" x="206" y="231" width="189" height="138"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please note that recordings can be up to 5 minutes long" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4a-cR-sv2">
+                                <rect key="frame" x="136" y="395" width="355" height="21"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ah-UD-sr8">
+                                <rect key="frame" x="136" y="214" width="355" height="173"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="145"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -57,14 +63,21 @@
                             <constraint firstAttribute="trailing" secondItem="NXJ-L0-kvd" secondAttribute="trailing" constant="20" id="GQX-GY-dHc"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZ0-qc-e0W" secondAttribute="bottom" constant="91" id="Pkf-AA-18T"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Y2w-AS-ASb" secondAttribute="bottom" constant="91" id="UH5-tb-7A9"/>
+                            <constraint firstAttribute="centerY" secondItem="p4a-cR-sv2" secondAttribute="centerY" constant="-105.5" id="UgG-2c-tiM"/>
                             <constraint firstAttribute="trailing" secondItem="dZ0-qc-e0W" secondAttribute="trailing" constant="202" id="VWV-Jg-vlZ"/>
+                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-13.5" id="YXv-Jp-g8O"/>
                             <constraint firstItem="dZ0-qc-e0W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="203" id="cGR-7h-tXC"/>
+                            <constraint firstItem="p4a-cR-sv2" firstAttribute="top" secondItem="3Ah-UD-sr8" secondAttribute="bottom" constant="8" id="duh-tz-arV"/>
                             <constraint firstItem="Y2w-AS-ASb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="165" id="duv-W7-CCi"/>
                             <constraint firstAttribute="centerX" secondItem="3Ah-UD-sr8" secondAttribute="centerX" constant="-0.5" id="fPd-ew-5oU"/>
+                            <constraint firstAttribute="centerX" secondItem="3Ah-UD-sr8" secondAttribute="centerX" constant="-13" id="gSP-39-xxn"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="p4a-cR-sv2" secondAttribute="bottom" constant="184" id="gyi-EX-Xrb"/>
                             <constraint firstItem="Y2w-AS-ASb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="225" id="hA2-zd-roU"/>
                             <constraint firstAttribute="trailing" secondItem="3Ah-UD-sr8" secondAttribute="trailing" constant="145" id="hbI-Oh-mAv"/>
                             <constraint firstAttribute="centerY" secondItem="3Ah-UD-sr8" secondAttribute="centerY" id="it2-2u-z9C"/>
+                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-1.5" id="j04-qE-uQ5"/>
                             <constraint firstItem="3Ah-UD-sr8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="146" id="l27-bV-wdY"/>
+                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-5" id="qJg-H9-YAK"/>
                             <constraint firstAttribute="trailing" secondItem="NXJ-L0-kvd" secondAttribute="trailing" constant="160" id="t0g-46-FNu"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZ0-qc-e0W" secondAttribute="bottom" constant="69" id="umQ-Bp-8af"/>
                             <constraint firstAttribute="trailing" secondItem="Y2w-AS-ASb" secondAttribute="trailing" constant="225" id="wIT-y6-4NQ"/>
@@ -73,14 +86,19 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="1dA-8w-iBt"/>
+                                <exclude reference="fPd-ew-5oU"/>
                                 <exclude reference="hbI-Oh-mAv"/>
                                 <exclude reference="l27-bV-wdY"/>
+                                <exclude reference="duh-tz-arV"/>
+                                <exclude reference="j04-qE-uQ5"/>
+                                <exclude reference="qJg-H9-YAK"/>
                                 <exclude reference="8To-Rc-tZt"/>
                                 <exclude reference="69K-ub-Yek"/>
                                 <exclude reference="hA2-zd-roU"/>
                                 <exclude reference="wIT-y6-4NQ"/>
                                 <exclude reference="9tG-LY-lx8"/>
                                 <exclude reference="Pkf-AA-18T"/>
+                                <exclude reference="gyi-EX-Xrb"/>
                                 <exclude reference="GQX-GY-dHc"/>
                             </mask>
                         </variation>
@@ -89,6 +107,7 @@
                     <connections>
                         <outlet property="playButton" destination="Y2w-AS-ASb" id="WPF-5o-veP"/>
                         <outlet property="recordButton" destination="dZ0-qc-e0W" id="108-SD-0re"/>
+                        <outlet property="reminderLabel" destination="p4a-cR-sv2" id="wHI-6c-1qb"/>
                         <outlet property="saveButton" destination="NXJ-L0-kvd" id="ECL-EN-hP1"/>
                         <outlet property="timerLabel" destination="3Ah-UD-sr8" id="Jz4-6M-EsJ"/>
                     </connections>
