--- a/bialoszewski/Base.lproj/Main.storyboard
+++ b/bialoszewski/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6185.11" systemVersion="13D65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6185.11" systemVersion="13D65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6190.4"/>
     </dependencies>
@@ -8,105 +8,61 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="RecordViewController" customModule="bialoszewski" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="RecordIcon" customModule="bialoszewski" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZ0-qc-e0W">
-                                <rect key="frame" x="203" y="456" width="195" height="75"/>
-                                <state key="normal" image="micro-75"/>
-                                <connections>
-                                    <action selector="recordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hK8-2F-O5z"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NXJ-L0-kvd">
-                                <rect key="frame" x="406" y="479" width="34" height="30"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="saveToDropbox:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uvC-5n-WNP"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y2w-AS-ASb">
-                                <rect key="frame" x="165" y="479" width="30" height="30"/>
-                                <state key="normal" title="Play">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="playTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ifT-3L-TiK"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please note that recordings can be up to 5 minutes long" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p4a-cR-sv2">
-                                <rect key="frame" x="136" y="395" width="355" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please note there’s a 5-minute limit per session" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="p4a-cR-sv2">
+                                <rect key="frame" x="248" y="607" width="273" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ah-UD-sr8">
-                                <rect key="frame" x="136" y="214" width="355" height="173"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="145"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3Ah-UD-sr8">
+                                <rect key="frame" x="206" y="426" width="355" height="173"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="141"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Y2w-AS-ASb">
+                                <rect key="frame" x="289" y="855" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Play"/>
+                                <state key="highlighted" image="play-50"/>
+                                <connections>
+                                    <action selector="playTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ifT-3L-TiK"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="dZ0-qc-e0W" customClass="RecordIcon" customModule="bialoszewski" customModuleProvider="target">
+                                <rect key="frame" x="347" y="842" width="75" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Filled"/>
+                                <connections>
+                                    <action selector="recordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r7J-Jc-46b"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="NXJ-L0-kvd">
+                                <rect key="frame" x="430" y="855" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveToDropbox:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uvC-5n-WNP"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="3Ah-UD-sr8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="151" id="1dA-8w-iBt"/>
-                            <constraint firstItem="Y2w-AS-ASb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="69K-ub-Yek"/>
-                            <constraint firstItem="dZ0-qc-e0W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="8To-Rc-tZt"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3Ah-UD-sr8" secondAttribute="bottom" constant="171" id="9tG-LY-lx8"/>
-                            <constraint firstAttribute="trailing" secondItem="NXJ-L0-kvd" secondAttribute="trailing" constant="20" id="GQX-GY-dHc"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZ0-qc-e0W" secondAttribute="bottom" constant="91" id="Pkf-AA-18T"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Y2w-AS-ASb" secondAttribute="bottom" constant="91" id="UH5-tb-7A9"/>
-                            <constraint firstAttribute="centerY" secondItem="p4a-cR-sv2" secondAttribute="centerY" constant="-105.5" id="UgG-2c-tiM"/>
-                            <constraint firstAttribute="trailing" secondItem="dZ0-qc-e0W" secondAttribute="trailing" constant="202" id="VWV-Jg-vlZ"/>
-                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-13.5" id="YXv-Jp-g8O"/>
-                            <constraint firstItem="dZ0-qc-e0W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="203" id="cGR-7h-tXC"/>
-                            <constraint firstItem="p4a-cR-sv2" firstAttribute="top" secondItem="3Ah-UD-sr8" secondAttribute="bottom" constant="8" id="duh-tz-arV"/>
-                            <constraint firstItem="Y2w-AS-ASb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="165" id="duv-W7-CCi"/>
-                            <constraint firstAttribute="centerX" secondItem="3Ah-UD-sr8" secondAttribute="centerX" constant="-0.5" id="fPd-ew-5oU"/>
-                            <constraint firstAttribute="centerX" secondItem="3Ah-UD-sr8" secondAttribute="centerX" constant="-13" id="gSP-39-xxn"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="p4a-cR-sv2" secondAttribute="bottom" constant="184" id="gyi-EX-Xrb"/>
-                            <constraint firstItem="Y2w-AS-ASb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="225" id="hA2-zd-roU"/>
-                            <constraint firstAttribute="trailing" secondItem="3Ah-UD-sr8" secondAttribute="trailing" constant="145" id="hbI-Oh-mAv"/>
-                            <constraint firstAttribute="centerY" secondItem="3Ah-UD-sr8" secondAttribute="centerY" id="it2-2u-z9C"/>
-                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-1.5" id="j04-qE-uQ5"/>
-                            <constraint firstItem="3Ah-UD-sr8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="146" id="l27-bV-wdY"/>
-                            <constraint firstAttribute="centerX" secondItem="p4a-cR-sv2" secondAttribute="centerX" constant="-5" id="qJg-H9-YAK"/>
-                            <constraint firstAttribute="trailing" secondItem="NXJ-L0-kvd" secondAttribute="trailing" constant="160" id="t0g-46-FNu"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dZ0-qc-e0W" secondAttribute="bottom" constant="69" id="umQ-Bp-8af"/>
-                            <constraint firstAttribute="trailing" secondItem="Y2w-AS-ASb" secondAttribute="trailing" constant="225" id="wIT-y6-4NQ"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NXJ-L0-kvd" secondAttribute="bottom" constant="91" id="ybk-Lb-cqe"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="1dA-8w-iBt"/>
-                                <exclude reference="fPd-ew-5oU"/>
-                                <exclude reference="hbI-Oh-mAv"/>
-                                <exclude reference="l27-bV-wdY"/>
-                                <exclude reference="duh-tz-arV"/>
-                                <exclude reference="j04-qE-uQ5"/>
-                                <exclude reference="qJg-H9-YAK"/>
-                                <exclude reference="8To-Rc-tZt"/>
-                                <exclude reference="69K-ub-Yek"/>
-                                <exclude reference="hA2-zd-roU"/>
-                                <exclude reference="wIT-y6-4NQ"/>
-                                <exclude reference="9tG-LY-lx8"/>
-                                <exclude reference="Pkf-AA-18T"/>
-                                <exclude reference="gyi-EX-Xrb"/>
-                                <exclude reference="GQX-GY-dHc"/>
-                            </mask>
-                        </variation>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="px8-55-8ro"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics">
+                        <size key="portraitSize" width="768" height="1024"/>
+                        <size key="landscapeSize" width="1024" height="768"/>
+                    </simulatedScreenMetrics>
                     <connections>
                         <outlet property="playButton" destination="Y2w-AS-ASb" id="WPF-5o-veP"/>
-                        <outlet property="recordButton" destination="dZ0-qc-e0W" id="108-SD-0re"/>
+                        <outlet property="recordButton" destination="dZ0-qc-e0W" id="Jrw-rO-qJa"/>
                         <outlet property="reminderLabel" destination="p4a-cR-sv2" id="wHI-6c-1qb"/>
                         <outlet property="saveButton" destination="NXJ-L0-kvd" id="ECL-EN-hP1"/>
                         <outlet property="timerLabel" destination="3Ah-UD-sr8" id="Jz4-6M-EsJ"/>
@@ -114,10 +70,19 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749" y="352"/>
+            <point key="canvasLocation" x="922" y="612"/>
         </scene>
     </scenes>
     <resources>
-        <image name="micro-75" width="75" height="75"/>
+        <image name="Filled" width="80" height="80"/>
+        <image name="play-50" width="50" height="50"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination">
+            <size key="portraitSize" width="768" height="1024"/>
+            <size key="landscapeSize" width="1024" height="768"/>
+        </simulatedScreenMetrics>
+    </simulatedMetricsContainer>
 </document>
