--- a/bialoszewski/Base.lproj/Main.storyboard
+++ b/bialoszewski/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="H7h-Ob-jdv">
                                 <rect key="frame" x="103" y="601" width="564" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <string key="text">Zapisane nagrania będą odtwarzane w ramach wystawy “Voice”.
+                                <string key="text">Zapisane nagrania będą odtwarzane w ramach wystawy “Głos”.
 </string>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
